# backend-i

./: README.md  challenge.py  hello.py
Projeto/: Makefile  README.md  compose.yaml  pyproject.toml
Projeto/src/projeto/: main.py
project/: Dockerfile  Makefile  README.md  compose.yaml  manage.py  pyproject.toml
project/.devcontainer/: devcontainer.json
project/book/: admin.py  urls.py  views.py
project/book/migrations/: 0001_initial.py
project/book/templates/book/: booking_list.html  index.html
project/diogo_tapas/: asgi.py  settings.py  urls.py  wsgi.py
project/reservas/: admin.py  forms.py  models.py  urls.py  views.py
project/reservas/migrations/: 0002_booking_delete_reservation.py
project/reservas/templates/: base.html  index.html
project/reservas/templates/book/: booking_list.html  index.html
project/reservas/templates/registration/: login.html  signup.html
project/reservas/templates/reservation/: reservation_list.html
session_1/: pyproject.toml
session_1/session_2/src/session_2/: comprehensions.py
session_1/src/session_1/: logging.py  main.py
session_10/: pyproject.toml
session_10/src/session_10/: http_server.py
session_11/: pyproject.toml
session_11/src/session_11/: main.py
session_11/tests/: test_main.py
session_12/: Compose.yaml  Dockerfile  Makefile  README.md  pyproject.toml
session_12/src/session_12/: database.py  main.py  models.py
session_12/tests/: test_api.py
session_13/: Dockerfile  Makefile  pyproject.toml
session_13/src/session_13/: main.py  models.py
session_14/: pyproject.toml
session_14/djangotutorial/core/: models.py
session_14/djangotutorial/core/migrations/: 0001_initial.py  0002_category.py  0003_category_products.py
session_14/djangotutorial/mysite/: settings.py
session_15/: Dockerfile  Makefile  compose.yaml  pyproject.toml
session_15/djproject/: settings.py
session_15/todo/: forms.py  urls.py  views.py
session_15/todo/templates/: base.html
session_15/todo/templates/registration/: login.html  signup.html
session_15/todo/templates/todo/: index.html  task_list.html
session_15/todo/tests/: test_views.py
session_2/: pyproject.toml
session_2/src/session_2/: comprehensions.py  functions.py
session_3/: pyproject.toml
session_3/src/session_3/: challenge.py  store.py
session_4/: pyproject.toml
session_4/src/session_4/: iterators.py
session_5/: pyproject.toml
session_5/src/session_5/: decorators.py  sleep.py
session_6/: pyproject.toml
session_6/src/session_6/: test_sample.py
session_6/tests/: sample.py  test_sample.py
session_7/: example.txt  pyproject.toml
session_7/src/session_7/: Decorator_manager.py  context_manager.py
session_8/: pyproject.toml
session_8/src/session_8/: __init__.py  app.py
session_8/tests/: test_app.py
session_9/: Dockerfile  compose.yaml  pyproject.toml
session_9/src/session_9/: app.py  bot.py
