[project]
name = "projeto"
version = "0.1.0"
description = ""
authors = [
    {name = "Diogo Alexandre Domingos Lopes",email = "diogolopes285@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "basemodel (>=20190604.1625,<20190605.0)",
    "django (>=5.1.7,<6.0.0)"
]

[tool.poetry]
packages = [{include = "projeto", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
