[project]
name = "session-2"
version = "0.1.0"
description = ""
authors = [
    {name = "DiogoLpes",email = "diogolopes285@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[project.scripts]
comprehension="src.session_2.comprehensions:main"

[tool.poetry]
packages = [{include = "session_2", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
